--- a/Day9/index.html
+++ b/Day9/index.html
@@ -19,6 +19,11 @@
     .red {
       color: red;
     }
+    .bdColor{
+      height: 30px;
+      width: 200px;
+      border: 5px solid blue;
+    }
   </style>
   <body>
     <h1 id="head">DOM</h1>
@@ -44,6 +49,9 @@
       alt="Image" />
 
     <div class="aqua blue"><b>this is a div</b></div>
+    <p class="para">This is a paragraph</p>
+    <button class="btn">Click me</button>
+    <h3 class="bdColor">Change border color</h3>
 
     <script src="Day_9.js"></script>
   </body>
